<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.start.StartFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Rick_and_Morty"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:background="@color/mucus"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_characters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/lime"
        android:text="@string/characters"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_myplaces"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/lime"
        android:text="@string/locations"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_dialog_map"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_episodes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/lime"
        android:text="@string/episodes"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@android:drawable/presence_video_online"
        app:iconTint="@color/black" />


</LinearLayout>