<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">


        <TextView
            android:id="@+id/episode_name_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pilot"
            android:textColor="@color/mucus"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/air_date"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/air_date_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="109.57"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/season"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/season_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="28.62"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/episode"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/number_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="28.62"
                android:textColor="@color/black" />

        </TableRow>

    </TableLayout>


</androidx.cardview.widget.CardView>