<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">


        <ImageView
            android:id="@+id/image_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="8dp">

            <TextView
                android:id="@+id/character_name_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rick Sanchez"
                android:textColor="@color/mucus"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/gender"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/gender_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="28"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/species"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/species_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="28"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/location"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/location_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="1"
                        android:layout_marginStart="8dp"
                        android:textColor="@color/black" />

                </TableRow>

            </TableLayout>

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>